# pi05_custom_inf

./: .gitignore  .gitmodules  .pre-commit-config.yaml  check_egl.py  check_gpu.py  compute_norm_stats.sh  compute_openpi_norm_stats.py  hf_download.py  hf_upload.py  hf_upload.sh  main.py  pyproject.toml
real_franka/: data_convert.py  merge_datasets.py  real_data_convert.py
real_franka/config/: cup_config.json  pick_and_place_config.json  toy_config.json
rlinf/envs/: utils.py
rlinf/envs/libero/: libero_env.py
rlinf/envs/maniskill/tasks/: __init__.py
rlinf/models/embodiment/openpi/: openpi_action_model.py
rlinf/models/embodiment/openpi/dataconfig/: __init__.py  franka_co_training_dataconfig.py
rlinf/models/embodiment/openpi/policies/: franka_policy.py
rlinf/utils/: metric_logger.py
rlinf/workers/sft/: fsdp_vla_sft_worker.py
toolkits/eval_scripts_openpi/: batch_blockpap_eval.sh  blockpap_eval.py  blockpap_eval.sh  check_realsense.py  real_franka_eval.py  real_franka_eval.sh
