[project]
name = "rlinf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "huggingface-hub>=1.7.2",
    "imageio>=2.37.3",
    "markupsafe<3.0.3",
    "pyrealsense2>=2.57.7.10387",
    "safetensors>=0.7.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
]



[tool.ruff.lint]
ignore = ["E402"]
