[project]
name = "rlinf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29.1",
    "huggingface-hub",
    "imageio>=2.37.3",
    "markupsafe<3.0.3",
    "pyrealsense2>=2.57.7.10387",
    "safetensors>=0.7.0",
    "scipy>=1.17.1",
    "torch>=2.8.0",
    "openpi",
    "augmax>=0.3.4",
    "dm-tree>=0.1.8",
    "einops>=0.8.0",
    "equinox>=0.11.8",
    "flatbuffers>=24.3.25",
    "flax==0.10.2",
    "fsspec[gcs]>=2024.6.0",
    "gym-aloha>=0.1.1",
    "jax[cuda12]==0.5.3",
    "jaxtyping==0.2.36",
    "lerobot",
    "ml_collections==1.0.0",
    "numpydantic>=1.6.6",
    "opencv-python>=4.10.0.84",
    "openpi-client",
    "orbax-checkpoint==0.11.13",
    "pillow>=11.0.0",
    "sentencepiece>=0.2.0",
    "tqdm-loggable>=0.2",
    "typing-extensions>=4.12.2",
    "tyro>=0.9.5",
    "wandb>=0.19.1",
    "filelock>=3.16.1",
    "beartype==0.19.0",
    "treescope>=0.1.7",
    "transformers==4.53.2",
    "rich>=14.0.0",
    "polars>=1.30.0",
]

[tool.uv]
override-dependencies = ["torch>=2.8.0"]

[tool.setuptools.packages.find]
include = ["toolkits*", "rlinf*"]

[tool.uv.sources]
openpi = { path = "openpi", editable = true }
openpi-client = { path = "openpi/packages/openpi-client", editable = true }
lerobot = { git = "https://github.com/huggingface/lerobot", rev = "0cf864870cf29f4738d3ade893e6fd13fbd7cdb5" }



[tool.ruff.lint]
ignore = ["E402"]
